test_regress/t/t_preproc_eof5_bad.out
%Error: t/t_preproc_eof5_bad.v:7:1: EOF in (*
    7 | (* attr
      | ^
%Error: Exiting due to
